data/derived/comb/progs/unify/prog6799.ml.out
Characters 148-151:
  | [] ->  if sum > 9 then [1,sum-1] else [sum]
                                           ^^^
Error: This expression has type int but an expression was expected of type
         int * int
